build: specify -L$(libdir) only when required and at the end of the list

--- a/test/Makefile
+++ b/test/Makefile
@@ -18,7 +18,9 @@ CFLAGS = -DUNIX -O0 -g $(FLAGS)
 
 INCLUDES += -I../trax
 
-LIBS += ../libsmartmet-trax.so $(REQUIRED_LIBS)
+LIBS += ../libsmartmet-trax.so \
+	$(REQUIRED_LIBS) \
+	$(PREFIX_LDFLAGS)
 
 all: $(PROG)
 clean:
